--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     buildToolsVersion "29.0.2"
     defaultConfig {
         applicationId "com.korea.hacks"
-        minSdkVersion 21
+        minSdkVersion 23
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -45,6 +45,10 @@ dependencies {
     // DataBinding
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     kapt "androidx.databinding:databinding-compiler:3.5.3"
+
+    // Glide
+    implementation "com.github.bumptech.glide:glide:4.9.0"
+    kapt "com.github.bumptech.glide:compiler:4.9.0"
 
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.6.2'
