feat: 채팅화면 틀 구현

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".view.portfolio.PortfolioActivity" />
+        <activity android:name=".view.chat.ChatActivity" />
     </application>
 
 </manifest>
