feat: 문의하기 화면 추가 및 포트폴리오 화면과 연결

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".view.portfolio.PortfolioActivity" />
+        <activity android:name=".view.contact.ContactActivity" />
     </application>
 
 </manifest>
